--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import mobileAppImg from "../images/mobile-app.png";
+import desktopAppImg from "../images/desktop-app.png";
 import gateImg from "../images/gate.png";
 import community from "../images/community.png";
 import carsParkingImg from "../images/cars-parking.png";
@@ -9,7 +10,7 @@ import logoImg from "../images/parkspot-logo-black-green.png";
 import linkedinLogo from "../images/linkedin-logo-green.png";
 ---
 
-<Layout title="Welcome to ParkSpot.">
+<Layout title="ParkSpot">
   <main>
     <div class="hero-bg sm:rounded-b-lg">
       <div
@@ -19,12 +20,12 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
           class="flex flex-col gap-4 text-white mx-4 pt-20 items-center sm:items-start sm:pt-36 sm:pb-32 md:mx-12 lg:ml-24 lg:mr-12"
         >
           <h1 class="text-xl text-center font-bold sm:text-6xl sm:text-left">
-            Reclaim Your Parking Rights With ParkSpot
+            Take Control Of Your Community Parking
           </h1>
           <div>
             <p class="text-center sm:text-left">
-              ParkSpot guarantees that you and your visitors will have a parking
-              spot in your community!
+              ParkSpot allows you to enforce parking rules in your residential
+              community!
             </p>
           </div>
           <a
@@ -35,11 +36,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
           </a>
         </div>
         <div class="flex flex-row justify-center">
-          <img
-            src={mobileAppImg.src}
-            alt="Park Spot Mobile App"
-            class="w-52 sm:w-80"
-          />
+          <img src={desktopAppImg.src} alt="Park Spot Desktop App" />
         </div>
       </div>
     </div>
@@ -48,30 +45,29 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
       <!-- the div right below this comment is contains all the banners in the white section -->
       <div class="max-w-7xl flex flex-col mx-auto my-0 sm:gap-4">
         <div
-          class="section-1-bg col-span-2 py-12 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center"
+          class="section-1-bg col-span-2 py-12 px-8 sm:rounded-lg sm:px-0 sm:flex sm:flex-row sm:justify-center sm:py-0"
         >
           <div class="sm:grid sm:grid-cols-2 sm:gap-4 sm:max-w-7xl">
             <div
               class="flex flex-col justify-center gap-4 sm:items-start sm:mx-12"
             >
-              <p class="text-green-500">WHY PARKSPOT?</p>
-              <h2 class="text-white text-4xl mb-4">
-                ParkSpot Fixes Your Community's Parking Problems
-              </h2>
+              <p class="text-green-500">HOW IT WORKS</p>
+              <h2 class="text-white text-4xl mb-4">The Parking Authority</h2>
               <p class="text-white">
-                ParkSpot was designed to protect your residential parking
-                rights, by making sure that everyone abides by the community
-                parking policy. That way, you’ll have the best chances of coming
-                home to vacant and well-situated parking spots.
+                ParkSpot is an app that residents can use to create parking
+                permits for their visitors.
+              </p>
+              <p class="text-white">
+                On ParkSpot, administrators can see the all the parking permits
+                that have been created in the community. ParkSpot also records
+                resident and visitor information.
               </p>
             </div>
-            <div class="flex flex-row justify-center my-8">
               <img
-                src={carsParkingImg.src}
-                alt="Cars Parking"
-                class="object-cover h-72"
+                src={mobileAppImg.src}
+                alt="Desktop Mobile App"
+                class="object-cover w-64 mx-auto sm:my-8"
               />
-            </div>
           </div>
         </div>
         <div class="sm:grid sm:grid-cols-2 sm:gap-4">
@@ -84,8 +80,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
                 Fair Visitor Parking For Everyone
               </h2>
               <p class="text-gray-500">
-                ParkSpot allows residents to create parking permits for their
-                visitors, while at the same time making sure that one resident
+                ParkSpot allows administrators to make sure that residents
                 doesn’t over-use their visitor parking.
               </p>
               <p class="text-gray-500">
@@ -103,17 +98,15 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
             <div class="flex flex-col gap-4 px-12 py-12">
               <p class="text-green-500">OUR SOLUTION</p>
               <h2 class="text-white text-4xl mb-4">
-                Policy backed by Data-Driven Software
+                Policy &amp; Data-Driven Software
               </h2>
               <p class="text-white">
-                ParkSpot records the details of every resident’s visitor
-                permits. If someone reaches their limit of visitor days,
-                ParkSpot will prevent that person from creating additional
-                permits.
+                If someone reaches their limit of visitor parking days, ParkSpot
+                will prevent that person from creating additional permits.
               </p>
               <p class="text-white">
-                ParkSpot can also be used to find faked visitor permits. So,
-                those who try to cheat the policy will be easily exposed.
+                ParkSpot can be used to easily detect fake parking permits. If a
+                printed permit does not have a legal QR code, then it is fake.
               </p>
             </div>
             <img
@@ -161,7 +154,7 @@ import linkedinLogo from "../images/linkedin-logo-green.png";
         >
           <div class="flex flex-col gap-4 items-center sm:items-start">
             <img src={logoImg.src} class="h-auto w-28" alt="ParkSpot Logo" />
-            <p>The friendly residential parking app.</p>
+            <p>The friendly residential parking app</p>
           </div>
           <div class="flex flex-col items-center gap-2 sm:gap-4 sm:items-start">
             <a href="https://www.linkedin.com/company/park-spot/about/">
